import meeting_pb2
import meeting_pb2_grpc

class MeetingServicer(meeting_pb2_grpc.MeetingServiceServicer):
    def SaveImportance(self, request, context):
        print(f"SaveImportance called with: {request}")
        # Dummy implementation
        return meeting_pb2.SaveImportanceResponse(success=True, message="Importance saved (stub).")

    def TranscribeAndSummarize(self, request, context):
        print(f"TranscribeAndSummarize called with audio_format: {request.audio_format} and data length: {len(request.audio_data)}")
        # Dummy implementation
        return meeting_pb2.TranscribeAndSummarizeResponse(
            transcription="This is a dummy transcription (stub).",
            summary="This is a dummy summary (stub).",
            error_message=""
        )

    def SaveMetadata(self, request, context):
        print(f"SaveMetadata called with: {request}")
        # Dummy implementation
        return meeting_pb2.SaveMetadataResponse(
            meeting_id="dummy_meeting_id_123",
            success=True,
            message="Metadata saved (stub)."
        )

    def EditMetadata(self, request, context):
        print(f"EditMetadata called with: {request}")
        # Dummy implementation
        return meeting_pb2.EditMetadataResponse(success=True, message="Metadata edited (stub).")

    def DeleteMetadata(self, request, context):
        print(f"DeleteMetadata called with: {request}")
        # Dummy implementation
        return meeting_pb2.DeleteMetadataResponse(success=True, message="Metadata deleted (stub).")

if __name__ == '__main__':
    # This part is for basic testing and can be removed or modified later
    # when creating the main server script.
    servicer = MeetingServicer()
    
    # Example usage of SaveImportance
    save_importance_req = meeting_pb2.SaveImportanceRequest(
        item_name="Agenda Item 1",
        importance=5,
        details="This is a very important item."
    )
    save_importance_resp = servicer.SaveImportance(save_importance_req, None)
    print(f"SaveImportance response: {save_importance_resp}")

    # Example usage of TranscribeAndSummarize
    transcribe_req = meeting_pb2.TranscribeAndSummarizeRequest(
        audio_data=b"some audio data",
        audio_format="wav"
    )
    transcribe_resp = servicer.TranscribeAndSummarize(transcribe_req, None)
    print(f"TranscribeAndSummarize response: {transcribe_resp}")

    # Example usage of SaveMetadata
    save_metadata_req = meeting_pb2.SaveMetadataRequest(
        title="Team Meeting",
        meeting_date="2024-05-27",
        attendees=["Alice", "Bob"],
        additional_info="Weekly sync-up"
    )
    save_metadata_resp = servicer.SaveMetadata(save_metadata_req, None)
    print(f"SaveMetadata response: {save_metadata_resp}")

    # Example usage of EditMetadata
    edit_metadata_req = meeting_pb2.EditMetadataRequest(
        meeting_id="dummy_meeting_id_123",
        title="Updated Team Meeting Title"
    )
    edit_metadata_resp = servicer.EditMetadata(edit_metadata_req, None)
    print(f"EditMetadata response: {edit_metadata_resp}")

    # Example usage of DeleteMetadata
    delete_metadata_req = meeting_pb2.DeleteMetadataRequest(
        meeting_id="dummy_meeting_id_123"
    )
    delete_metadata_resp = servicer.DeleteMetadata(delete_metadata_req, None)
    print(f"DeleteMetadata response: {delete_metadata_resp}")
